--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ compiler:
 branches:
   only:
     - master
-install:
+before_install:
   - sudo apt-get install -qq -y zlib1g-dev libgdbm-dev slib
+install:
+  - curl https://raw.github.com/mytoh/travis-files/master/install-gauche.sh | sh
 script:
   sh ./test/run-travis.sh
